tests/failure/enum-from-no-args.stderr
error: expected attribute arguments in parentheses: #[from(...)]
 --> tests/failure/enum-from-no-args.rs:5:7
  |
5 |     #[from]
  |       ^^^^
